# toptyp

./: README.md  Resource.h  sha1.cpp  sha1.h  stdafx.cpp  toptyp.cpp  toptyp.exe.manifest  toptyp.rc  toptyp.sln  toptyp.vcxproj  totp.cpp  totp.rc  totp.sln  totp.vcxproj
backend/: Cargo.toml
backend/src/: lib.rs
