[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "totp_backend"
crate-type = ["staticlib"]

[dependencies]
once_cell = "1.16.0"
dirs = "4.0.0"
totp-lite = "2.0.0"
url = "2.3.1"
base32 = "0.4.0"
percent-encoding = "2.2.0"
quircs = "0.10.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true # Removes most of std
#opt-level = "z"  # Optimize for size.
#codegen-units = 1
panic = "abort"

[profile.dev]
strip = true  # Automatically strip symbols from the binary.
lto = true # Removes most of std
#opt-level = "z"  # Optimize for size.
#codegen-units = 1
panic = "abort"